SERVER-57772 suppress state-change rewrite when `writeConcernError` is injected by `failCommand`.